dataverse-webapp/src/main/webapp/resources/vecler/theme-base.scss
/* ... */
#accessibility-controls {
	position: absolute;
	bottom: -1.3em;
	right: 1.2em;
	background: #fff;
	padding: 0em 0.8em 0.9em 0.8em;
	border-radius: $border-radius;

	line-height: 0.8em;

	ul[id$="-mode-selector"] {
		margin: 0;
		padding: 0;
		display: inline-block;
		list-style-type: none;

		li {
			display: block;
			float: left;
			margin-left: 0.4em;

			button {
				position: relative;
				top: 0.5em;
				padding: 0.4em 0.2em;
				cursor: pointer;
			}
		}
	}

	span:not(:last-child) ul[id$="-mode-selector"] {
		padding-right: 0.8em;
	}
}

@mixin accessibility-controls-mobile {
	#accessibility-controls {
		position: static;
		margin-left: -15px;
		margin-right: -15px;
		padding: 0;

		span {
			display: block;
			width: 100%;
			padding: 0 1.333em 0.667em;
		}
	}
}

@media screen and (max-width: $screen-xs-max) {
	@include accessibility-controls-mobile;
}

#eighty-limit-mode-selector button,
#wcag-text-mode-selector button {
	position: relative;
	border: 1px solid $main-text-color;
	background: #fff;
	color: $main-color;
	font-weight: bold;
	text-decoration: none;
	overflow: hidden;

	&::after {
		opacity: 0;
		content: "Aa";
	}
}
body.eighty-limit-toggle #eighty-limit-mode-selector button,
body.wcag-text-toggle #wcag-text-mode-selector button {
	color: $focus-color;
}

#eighty-limit-mode-selector button::before {
	position: absolute;
	content: "80";
}
#wcag-text-mode-selector button::before {
	position: absolute;
	content: "==";
}

#font-size-mode-selector button {
	position: relative;
	border: 1px solid $main-text-color;
	background: #fff;
	color: $main-color;
	font-weight: bold;
	text-decoration: none;
	overflow: hidden;

	&::before {
		position: absolute;
		content: "A";
	}
	&::after {
		opacity: 0;
		content: "Aa";
	}

	&.default::before {
		left: 0.45em;
		line-height: 0.9em;
	}
	&.percent-150::before {
		left: 0.20em;
		font-size: 1.5em;
		line-height: 0.6em;
	}
	&.percent-200::before {
		content: "A";
		left: 0.07em;
		font-size: 2em;
		line-height: 0.47em;
	}
}

#high-contrast-mode-selector button {
	border: 1px solid $main-text-color;
	background: #fff;
	color: $main-color !important;
	font-weight: bold;
	text-decoration: none !important;

	&::before {
		content: "Aa";
	}
}

/* Footer */

#footer {
	position: static;
	height: auto;
	padding-bottom: 0;

	.footer-links .row {
		border-top: 1px solid $gray-border-color;
		margin: 0;
		padding-top: 1em;
		font-size: 0.867em;

		div[class^="col-"] {
			padding: 0;

			p span {
				border-left: 1px solid $gray-border-color;
				margin-left: 1em;
				padding-left: 1em;
			}
		}
	}
}
.widget-view {
	&#footer {
		position: static;
	}
	#footer-logos {
		display: none;
	}
}

@media screen and (max-width: $screen-xs-max) {
	#footer {
		&.widget-view .poweredbylogo {
			text-align: inherit;
		}
		
		div[class^="col-"] {
			text-align: center;
		}
	}
}

/* Sticky footer fix */
html, body {
	height: 100%;

	&, #body-wrapper {
		min-height: 100%;
	}
}
#body-wrapper {
	display: flex;
	flex-direction: column;
}
#content {
	flex: 1 0 auto;
	max-width: 100%;
}
#navbarFixed, #footer {
	flex-shrink: 0;
}


/* Main page */

#editDataverseMenu {
	min-width: 300px;
}

#dataverse-info-dropdown {
	width: auto;
	
	.dataverse-info-general {
		width: auto;
	}
}

#dataverseForm {
	margin-left: -10px;
	margin-right: 20px;
} 

#dataverseDesc {
	margin-left: 15px;
	width: 100%;
	padding-top: 15px;
}

#searchResults {
	margin-left: 15px;
	margin-right: 15px;
}

@mixin searchResults-mobile {
	#searchResults {
		overflow-x: hidden;
		margin-left: 0;
		margin-right: 0;
		padding-left: 15px;
		padding-right: 15px;
	}
}

@media screen and (max-width: $screen-xs-max) {
	@include searchResults-mobile;
}

#search-row-panel {
	padding: 13px 0;
	border-color: $gray-border-color;
	border-radius: $border-radius;
}

#dataverseForm #actionButtonBlock {
	width: calc(100% + 10px);
	margin-left: 10px;
}
#actionButtonBlock .glyphicon {
	margin-right: 5px;
	color: $icon-color;
}

.row.panelSearchForm {
	& > .col-sm-8 {
		padding-left: 0;
	}

	& > .col-manage-action {
		padding-right: 0;
	}
}

div.panelSearchForm input.search-input {
	max-width: calc(100% + 1em);
	line-height: 23px;
}
@media screen and (max-width: $screen-xs-max) {
	div.panelSearchForm input.search-input {
		max-width: 100%;
	}
}

.pagination > .active > a {
	border-color: $main-color;
	background-color: $main-color;
}
.ui-paginator {
	.ui-paginator-first,
	.ui-paginator-prev,
	.ui-paginator-next,
	.ui-paginator-last {
		position: relative;
		top: calc(0.7139em - 7.992px);
	
		.ui-icon {
			height: 16px;
			margin: calc(0.7139em - 7.992px) 0;
			text-indent: 0;
			color: transparent;
			text-shadow: none;
		}
	
		&.ui-state-disabled span {
			filter: saturate(0);
		}
	}
	
}
#metrics-block.col-sm-4 {
	padding: 0;
	border: none;
	color: $main-text-color;
}
@media screen and (max-width: $screen-xs-max) {
	#metrics-block.col-sm-4 + div.pull-right {
		padding-top: 15px;
	}
}

#metrics-label {
	background: #fff;
	border-radius: 6px 0 0 6px;
	border: 1px solid $gray-border-color;

	.glyphicon-stats {
		color: $icon-color;
	}

	a {
		padding: 0;
	}
}

#metrics-content {
	border-radius: 0 6px 6px 0;
	border: 1px solid $gray-border-color;
	border-left: none;
}

@media screen and (min-width: $screen-xs-max) and (max-width: 1199px) {
	body:not([class*="font-size-percent"]) {
		#metrics-label {
			font-size: 0;
		}
	
		#metrics-label .glyphicon-stats {
			font-size: 18px;
		}
	}
}

/* Carousel */

#featuredDataversesBlock {
	border-top: 0;

	div.customNavigation {
		width: auto;
		margin: 42px 0;
		padding: 0;
	
		a.btn {
			&:active {
				box-shadow: none;
			}
	
			&.prev1,
			&.next1 {
				padding-left: 0;
				padding-right: 0;
			}
		}
	
		span.glyphicon {
			font-size: 1em;
			color: $icon-color;
			border: 1px solid $gray-border-color;
			border-radius: 333px;
			width: 29px;
			height: 29px;
			box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 2px 0px;
			margin: 0 auto;
			line-height: 25px;
			padding-left: 1px;
		}
	}
}
/* ... */

